--- a/web/src/index.html
+++ b/web/src/index.html
@@ -5,6 +5,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>Edge Detection Frame</h1>
+  <img id="frame" />
+  <p>Stats: <span id="fps"></span></p>
   <script src="index.ts"></script>
 </body>
 </html>
